# sus_report

./: .gitignore  README.md  action_plan.md  agg_intermed.py  batch_status_check.py  build_batch.py  build_v2_batch.py  compare_v1_v2.py  config.yaml  parse_output.py  parse_v2_output.py  pyproject.toml  refresh.py  run_batch.py  taxonomy.py  test.py  update.txt
.claude/: settings.local.json
batch_folder/pilot/: RESULTS_COMPARISON.md  batch_jsonl_summary.md
config/: pilot.yaml  run.yaml  run_test_trucost.yaml  run_test_whole_universe.yaml
legacy/: README.md  parse_export.py  research_run.py  v1_run_batch.py
legacy/config/: pilot.yaml  test.yaml
legacy/src/runner/: sample_companies.py
legacy/src/utils/: taxonomy.py
logger/: __init__.py
protocols/: prepare_parameters_0722.md  refactor_0718.md  system_prompt_improvements_0723.md
src/carbontax/: __init__.py  config.py  paths.py  schemas.py  taxonomy.py
src/carbontax/acquire/: __init__.py  download_pdf_file.py  mapping.py  pdfs.py  tokens.py
src/carbontax/acquire_pdfs/: README.md  __init__.py  download_pdf_file.py  mapping.py  tokens.py
src/carbontax/analysis/: README.md  __init__.py  build_report.py  compare.py  excel.py  report.py  reporter.py
src/carbontax/chunking/: __init__.py  filter.py  pdf_parser.py  pipeline.py  splitter.py
src/carbontax/extraction/: __init__.py  build_batch.py  download_batch.py  parse_output.py  paths.py  run_batch.py
src/carbontax/openai_batch/: README.md  __init__.py  batch_job.py  check_status.py  download_batch.py  parse_output.py  submit_batch.py
src/carbontax/prepare_batch_input/: README.md  __init__.py  filter.py  pdf_parser.py  prepare.py  preparer.py  splitter.py
src/carbontax/utils/: __init__.py  llm.py  logger.py
src/reporting/: excel.py
src/research_config/: pilot.yaml  test.yaml
src/runner/: research_run.py
src/utils/: llm_schemas.py  llm_wrapper.py  logger.py  recursive_splitter.py  research_question.py  semantic_filter.py  taxonomy.py
