[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbontax"
version = "0.2.0"
description = "LLM-based extraction of corporate carbon-reduction measures from sustainability-report PDFs, classified into a sourced two-tier taxonomy."
requires-python = ">=3.10"
authors = [
    {name = "Zheng Gong", email = "zheng.gong94@gmail.com"},
]
dependencies = [
    "openai>=1.0.0",
    "SQLAlchemy>=2.0.0",
    "python-dotenv==1.1.1",
    "tqdm>=4.67.1",
    "openpyxl",
    "jinja2",
    "pandas",
    "pyarrow",
    "tiktoken",
    "requests",
    "PyYAML>=6.0",
    "PyMuPDF>=1.24",
    "pydantic>=2.0",
    "openai-batch-wrapper @ git+https://github.com/ZhengGong-hub/openai-batch-wrapper.git@v0.0.5"
]

# Console entry points — run from the repo root (scripts use relative data paths).
# Pipeline order: acquire → mapping → chunk → build → run → (wait) → download → parse → report → compare
[project.scripts]
carbontax-acquire = "carbontax.acquire.download_pdf_file:main"
carbontax-mapping = "carbontax.acquire.mapping:main"
carbontax-chunk   = "carbontax.chunking.pipeline:main"
carbontax-build   = "carbontax.extraction.build_batch:main"
carbontax-run     = "carbontax.extraction.run_batch:main"
carbontax-download = "carbontax.extraction.download_batch:main"
carbontax-parse   = "carbontax.extraction.parse_output:main"
carbontax-report  = "carbontax.analysis.excel:main"
carbontax-compare = "carbontax.analysis.compare:main"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
