[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbontax"
version = "0.3.0"
description = "LLM-based extraction of corporate carbon-reduction measures from sustainability-report PDFs, classified into a sourced two-tier taxonomy."
requires-python = ">=3.10"
authors = [
    {name = "Zheng Gong", email = "zheng.gong94@gmail.com"},
]
dependencies = [
    "openai>=1.0.0",
    "SQLAlchemy>=2.0.0",
    "python-dotenv==1.1.1",
    "tqdm>=4.67.1",
    "openpyxl",
    "jinja2",
    "pandas",
    "pyarrow",
    "tiktoken",
    "requests",
    "PyYAML>=6.0",
    "PyMuPDF>=1.24",
    "pydantic>=2.0",
    "openai-batch-wrapper @ git+https://github.com/ZhengGong-hub/openai-batch-wrapper.git@v0.0.5"
]

# Console entry points — run from the repo root; all read config/run.yaml (no CLI arguments).
# Pipeline order: acquire → mapping → prepare → submit → status → (wait) → download → parse → report
[project.scripts]
carbontax-acquire  = "carbontax.acquire_pdfs.download_pdf_file:main"
carbontax-mapping  = "carbontax.acquire_pdfs.mapping:main"
carbontax-prepare  = "carbontax.prepare_batch_input.prepare:main"
carbontax-submit   = "carbontax.openai_batch.submit_batch:main"
carbontax-status   = "carbontax.openai_batch.check_status:main"
carbontax-download = "carbontax.openai_batch.download_batch:main"
carbontax-parse    = "carbontax.openai_batch.parse_output:main"
carbontax-report   = "carbontax.analysis.build_report:main"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
